packages/components/bolt-toolbar/toolbar.scss
@import '@bolt/core-v3.x';

.c-bolt-toolbar {
  position: relative;
  min-width: 100%;
  margin: 0 auto;
  font-size: var(--bolt-type-font-size-small);
  color: var(--m-bolt-secondary);
  line-height: var(--bolt-type-line-height-small);
}

.c-bolt-toolbar--sticky {
  position: sticky;
  top: 0;
  left: 0;
  z-index: bolt-z-index(nav);
  width: 100vw;
  margin: 0 -50vw;
}

.c-bolt-toolbar__inner {
  max-width: bolt-breakpoint(xxlarge);
  margin: 0 auto;
  padding-top: var(--bolt-spacing-y-small);
  padding-right: $bolt-wrapper-padding;
  padding-bottom: var(--bolt-spacing-y-small);
  padding-left: $bolt-wrapper-padding;

  @include bolt-mq(medium) {
    padding-right: $bolt-wrapper-padding-at-medium-bp;
    padding-left: $bolt-wrapper-padding-at-medium-bp;
  }
}

.c-bolt-toolbar__title {
  display: flex;
  align-items: center;

  &:not(:last-child) {
    margin-right: 0.5rem;
  }
}

.c-bolt-toolbar__title-text {
  font-size: var(--bolt-type-font-size-medium);
  font-weight: var(--bolt-type-font-weight-semibold);
  line-height: var(--bolt-type-line-height-medium);
}

.c-bolt-toolbar__title-icon {
  margin-right: var(--bolt-spacing-x-small);
}

.c-bolt-toolbar__items {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-items: center;
  position: relative;
  width: 100%;
  margin-bottom: calc(var(--bolt-spacing-y-small) * -1);
}

.c-bolt-toolbar__item {
  margin-bottom: var(--bolt-spacing-y-small);

  &:not(:last-child) {
    margin-right: 1rem;
  }

  &--before {
    display: flex;
    align-items: center;
  }

  &--after {
    margin-left: auto;
  }
}

.c-bolt-toolbar--purple,
.c-bolt-toolbar--pink {
  background-image: linear-gradient(
    90deg,
    var(--bolt-color-wine) 0%,
    var(--bolt-color-berry) 100%
  );
}

.c-bolt-toolbar--navy,
.c-bolt-toolbar--indigo {
  background-image: linear-gradient(
    90deg,
    var(--bolt-color-navy) 0%,
    var(--bolt-color-navy-light) 100%
  );
}

.c-bolt-toolbar--teal {
  background-image: linear-gradient(
    90deg,
    var(--bolt-color-navy-dark) 0%,
    var(--bolt-color-teal) 100%
  );
}

.c-bolt-toolbar--orange {
  background-image: linear-gradient(
    270deg,
    var(--bolt-color-orange) 0%,
    var(--bolt-color-orange-dark) 100%
  );
}

